--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "firebase": "^10.4.0",
+    "moment": "^2.29.4",
     "next": "latest",
     "next-auth": "^4.23.1",
     "react": "latest",
